@@ -1,4 +1,6 @@
 2003-02-01  Bill Bumgarner  <bbum@codefab.com>
+    * Moved project templates to copy the PyObjC directory from
+      site-packages.  Fixed Web Services Tool example appropriately.
     * Lib/objc/_convenience.py:  __repr__ and __str__ now both invoke
       -description.   Not sure why __repr__ doing that was commented out
       before, but it seems to work-- same set of unit tests pass.
